--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/style.css">
     <link rel="icon" href="img/flowers.png" type="image/x-icon">
-    <title>Flowers</title>
+    <title>FOR YOU</title>
 </head>
 <body>
     <div class="greetings">
@@ -43,5 +43,6 @@
             <a href="flower.html">Klik disini ya cantik <span style="color: #B01E28;">&#9829</span></a>
         </button>   
     </div>
+    <script src="main.js"></script>
 </body>
 </html>
